// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker renders picker with pre-defined default colors 1`] = `
<DocumentFragment>
  <div
    class="widget-color-picker widget-color-picker-picker"
  />
</DocumentFragment>
`;

exports[`ColorPicker renders the structure correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-color-picker widget-color-picker-picker"
  >
    <button
      class="btn"
    >
      <div
        class="widget-color-picker-inner"
        style="background: rgb(0, 0, 0);"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`ColorPicker that is disabled renders with the structure 1`] = `[Function]`;

exports[`ColorPicker with a mode as inline renders with the structure 1`] = `
<DocumentFragment>
  <div
    class="widget-color-picker widget-color-picker-picker"
  >
    <div
      class=""
    >
      <div
        class="sketch-picker "
        style="width: 200px; padding: 10px 10px 0px; box-sizing: initial; background: rgb(255, 255, 255); border-radius: 4px; box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);"
      >
        <div
          style="width: 100%; padding-bottom: 75%; position: relative; overflow: hidden;"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: rgb(255, 0, 0);"
          >
            <style>
              
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
            </style>
            <div
              class="saturation-white"
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <div
                class="saturation-black"
                style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
              />
              <div
                style="position: absolute; top: 100%; left: 0%; cursor: default;"
              >
                <div
                  style="width: 4px; height: 4px; box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4); border-radius: 50%; cursor: hand; transform: translate(-2px, -2px);"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="flexbox-fix"
          style="display: flex;"
        >
          <div
            style="padding: 4px 0px; flex: 1;"
          >
            <div
              style="position: relative; height: 10px; overflow: hidden;"
            >
              <div
                style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
              >
                <div
                  class="hue-horizontal"
                  style="padding: 0px 2px; position: relative; height: 100%;"
                >
                  <style>
                    
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
                  </style>
                  <div
                    style="position: absolute; left: 0%;"
                  >
                    <div
                      style="margin-top: 1px; width: 4px; border-radius: 1px; height: 8px; box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255); transform: translateX(-2px);"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              style="position: relative; height: 10px; margin-top: 4px; overflow: hidden; display: none;"
            >
              <div
                style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
              >
                <div
                  style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden;"
                >
                  <div
                    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABmJLR0QA/wD/AP+gvaeTAAAAK0lEQVQ4jWNkYGAQYcAP3uCTZCKgmSAYNWAwGMBIhBq86WTgvTBqABUMAABXlAEzkiIyLgAAAABJRU5ErkJggg==) left;"
                  />
                </div>
                <div
                  style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
                />
                <div
                  style="position: relative; height: 100%; margin: 0px 3px;"
                >
                  <div
                    style="position: absolute; left: 100%;"
                  >
                    <div
                      style="width: 4px; border-radius: 1px; height: 8px; box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255); margin-top: 1px; transform: translateX(-2px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 24px; height: 10px; position: relative; margin-top: 4px; margin-left: 4px; border-radius: 3px;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABmJLR0QA/wD/AP+gvaeTAAAAK0lEQVQ4jWNkYGAQYcAP3uCTZCKgmSAYNWAwGMBIhBq86WTgvTBqABUMAABXlAEzkiIyLgAAAABJRU5ErkJggg==) left;"
            />
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; border-radius: 2px; background: rgb(0, 0, 0); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);"
            />
          </div>
        </div>
        <div
          class="flexbox-fix"
          style="display: flex; padding-top: 4px;"
        >
          <div
            style="flex: 2;"
          >
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-18"
                spellcheck="false"
                style="width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
                value="000000"
              />
              <label
                for="rc-editable-input-18"
                style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
              >
                hex
              </label>
            </div>
          </div>
          <div
            style="flex: 1; padding-left: 6px;"
          >
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-19"
                spellcheck="false"
                style="width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
                value="0"
              />
              <label
                for="rc-editable-input-19"
                style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
              >
                r
              </label>
            </div>
          </div>
          <div
            style="flex: 1; padding-left: 6px;"
          >
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-20"
                spellcheck="false"
                style="width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
                value="0"
              />
              <label
                for="rc-editable-input-20"
                style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
              >
                g
              </label>
            </div>
          </div>
          <div
            style="flex: 1; padding-left: 6px;"
          >
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-21"
                spellcheck="false"
                style="width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
                value="0"
              />
              <label
                for="rc-editable-input-21"
                style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
              >
                b
              </label>
            </div>
          </div>
          <div
            style="flex: 1; padding-left: 6px; display: none;"
          >
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-22"
                spellcheck="false"
                style="width: 80%; padding: 4px 10% 3px; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
                value="100"
              />
              <label
                for="rc-editable-input-22"
                style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
              >
                a
              </label>
            </div>
          </div>
        </div>
        <div
          class="flexbox-fix"
          style="margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid #eee; display: flex; flex-wrap: wrap; position: relative;"
        >
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(208, 2, 27); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#D0021B"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(245, 166, 35); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#F5A623"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(248, 231, 28); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#F8E71C"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(139, 87, 42); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#8B572A"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(126, 211, 33); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#7ED321"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(65, 117, 5); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#417505"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(189, 16, 224); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#BD10E0"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(144, 19, 254); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#9013FE"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(74, 144, 226); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#4A90E2"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(80, 227, 194); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#50E3C2"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(184, 233, 134); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#B8E986"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(0, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#000000"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(74, 74, 74); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#4A4A4A"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(155, 155, 155); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#9B9B9B"
              />
            </span>
          </div>
          <div
            style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
          >
            <span>
              <div
                style="background: rgb(255, 255, 255); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; border-radius: 3px; box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
                tabindex="0"
                title="#FFFFFF"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColorPicker with a mode as popover or input renders with the structure 1`] = `
<DocumentFragment>
  <div
    class="widget-color-picker widget-color-picker-picker"
  >
    <button
      class="btn"
    >
      <div
        class="widget-color-picker-inner"
        style="background: rgb(0, 0, 0);"
      />
    </button>
  </div>
</DocumentFragment>
`;
